fix experience UI alignment, start on skills

--- a/myr-site/src/app/app.component.css
+++ b/myr-site/src/app/app.component.css
@@ -52,3 +52,11 @@ a:hover {
 .placeholder-text {
   justify-content: center;
 }
+
+.cardHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  overflow: auto;
+}
