--- a/myr-site/src/styles.css
+++ b/myr-site/src/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Hanuman");
+@import url('https://fonts.googleapis.com/css2?family=Hanuman:wght@300;400;700&display=swap');
 @import "../node_modules/normalize.css/normalize.css";
 
 html {
@@ -12,7 +12,7 @@ h4,
 h5,
 h6 {
   margin: 8px 0;
-  font-family: "Hanuman";
+  font-family: "Hanuman", serif;
 }
 
 h1 {
@@ -51,7 +51,7 @@ footer {
   font-weight: 600;
 }
 
-.header {
+header {
   display: flex;
   flex-direction: column;
   align-items: center;
